2003-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am : Removed some debug code which was
	accidentally committed to CVS.
	* Copyright.txt: Add copyright statements to all the files,
	including some apparently missing copyrights.

2003-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/Makefile.am: Added temporary.c and temporary.h. These
	are not finished yet.
	* magick/cache.c: Transferred optimization from ImageMagick
	to read/write all requested pixel cache rows in one system
	call when accessing the cache using file I/O, and the
	requested columns equals the image columns.
	* magick/resource.c: (ResourceInfo): Use type 'double' rather
	than 'long double'. For many systems, the range of 'long double'
	is the same as 'double'.  On others, use of 'long double' incurs
	the cost of function calls since there is no hardware support.

2003-03-22  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/effect.h, effect.c, command.c: Revised -random-dither
	to require parameters: channel LOWxHIGH.  Channel can presently
	be "intensity", "opacity", or "all".

2003-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/ltdl.c: Updated to latest CVS version.  Claimed to
	support loading modules under MacOS-X.
	* magick/resource.c (InitializeMagickResources): Enable code
	under Windows which queries system limits.
	* magick/cache.c (S_MODE): Fixed portability problems with
	definition.
	* VisualMagick/bin/delegates.mgk: Fix typo in "mpeg-decode"
	decode rule.
	* libtool: Update to latest CVS version.
	* configure.ac: Test zlib for gzseek and gztell.
	* magick/effect.c (ChannelThresholdImage): The is_grayscale flag
	was not be evaluated correctly.

2003-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.h (RoundSignedToQuantum): Added handy
	RoundSignedToQuantum macro for munging doubles into Quantums.
	* magick/effect.c (ThresholdImage): Added optimizations for