@@ -7,14 +7,6 @@
 % Copyright.txt. You should have received a copy of Copyright.txt with this
 % package; otherwise see http://www.graphicsmagick.org/www/Copyright.html.
 %
-% Copyright (C) 2003 GraphicsMagick Group
-% Copyright (C) 2002 ImageMagick Studio
-% Copyright 1991-1999 E. I. du Pont de Nemours and Company
-%
-% This program is covered by multiple licenses, which are described in
-% Copyright.txt. You should have received a copy of Copyright.txt with this
-% package; otherwise see http://www.graphicsmagick.org/www/Copyright.html.
-%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                             %
 %                                                                             %
