@@ -13,6 +13,20 @@
 </tr>
 </table>
 <p>
+2003-03-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/resize.c (ResizeImage): Applied fix authored by John
+        Cristy for distortion when using the bessel filter.
+  <LI> magick/display.c: Applied fix authored by John Cristy which
+        eliminates bogging down when using the magnifier window on
+        large images.<BR>
+  <LI> Several files: A few files included multiple copies of the
+        copyright header text due to either pilot error, or equipment
+        failure.
+
+</UL>
+<p>
 2003-03-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
